--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -318,8 +318,8 @@ code {
   background: rgba(66, 66, 66, 0.5);
   border-radius: 6px;
   border: solid 2px rgba(255, 255, 255, 0.35);
-  font-family: "Courier New", monospace;
-  font-size: 0.9em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1em;
   margin: 0 0.25em;
   padding: 0.25em 0.65em; }
 
