added new github link to html, typo fix in readme

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -339,6 +339,10 @@ pre {
   display: inline-block;
 }
 
+.portfolio-link{
+  font-size: 18px;
+}
+
 hr {
   border: 0;
   border-bottom: solid 2px rgba(255, 255, 255, 0.35);
